# OpenAR

./: ARFrameWork.sln  AutoRunBuild.bat  CMakeLists.txt  LICENSE  OpenAR.bat
ARCuda/include/: TemplateMatchMPRCuda.cuh
ARCuda/src/: TemplateMatchMPRCuda.cu
ARFrameWork/include/Cmd/: CmdTools.hpp
ARFrameWork/include/Controller/: AdbController.h  Controller.h  ControllerParams.hpp  MuMuController.h
ARFrameWork/include/Data/: ARData.h  ARJson.h
ARFrameWork/include/DeviceController/: DeviceController.h  DeviceParams.hpp  MuMuDeviceController.h
ARFrameWork/include/ImageRecognition/: CudaMultiPointsRecognition.h  ImageParams.hpp  ImageRecognition.h  MultiPointsRecognition.h  PrefixSumRecognition.h  TemplateMatchMPR.h  TemplateMatchPSR.h
ARFrameWork/include/Log/: MiniLog.h
ARFrameWork/include/TextRecognition/: TesseractOCR.h  TextMatchTesseractOCR.h  TextParams.hpp  TextRecognition.h
ARFrameWork/src/: CudaMultiPointsRecognition.cpp  ImageRecognition.cpp  MiniLog.cpp  MultiPointsRecognition.cpp  TemplateMatchMPR.cpp  TextRecognition.cpp
ARFrameWork/src/Controller/: AdbController.cpp  Controller.cpp  MuMuController.cpp
ARFrameWork/src/Data/: ARData.cpp  ARJson.cpp
ARFrameWork/src/DeviceController/: DeviceController.cpp  MuMuDeviceController.cpp
ARFrameWork/src/ImageRecognition/: CudaMultiPointsRecognition.cpp  ImageRecognition.cpp  MultiPointsRecognition.cpp  PrefixSumRecognition.cpp  TemplateMatchMPR.cpp  TemplateMatchPSR.cpp
ARFrameWork/src/Log/: MiniLog.cpp
ARFrameWork/src/TextRecognition/: TesseractOCR.cpp  TextMatchTesseractOCR.cpp  TextRecognition.cpp
ARLauncher/include/: ARLGlobalParams.h  ARLTaskNode.h  ARLTaskPipline.h
ARLauncher/src/: ARLGlobalParams.cpp  ARLPipline.cpp  ARLTaskNode.cpp  main.cpp
ARStudio/include/: ARCodeEditor.h  ARMainWindow.h  ARMenuBar.h  ARProjectExplorer.h  ARPromptWindows.h  ARStudioParams.hpp  ARToolBar.h  ARWindowsManager.h  ARWindowsTools.hpp  MainWindow.h  MenuBar.h  WindowsManager.h  WindowsParams.hpp  WindowsTools.hpp
ARStudio/src/: ARCodeEditor.cpp  ARMainWindow.cpp  ARMenuBar.cpp  ARProjectExplorer.cpp  ARPromptWindows.cpp  ARToolBar.cpp  ARWindowsManager.cpp  MainWindow.cpp  MenuBar.cpp  main.cpp
Cuda/: CMakeLists.txt
Cuda/include/: TemplateMatchSSDCuda.cuh
Cuda/src/: TemplateMatchMPRCuda.cu  TemplateMatchSSDCuda.cu
FrameWork/: CMakeLists.txt
FrameWork/include/Cmd/: CmdTools.hpp
FrameWork/include/Controller/: MicroSwipe.hpp
FrameWork/include/DeviceController/: DeviceController.h  DeviceParams.hpp
FrameWork/include/ImageRecognition/: TemplateMatchMPR.h  TemplateMatchORB.h
FrameWork/include/Log/: MiniLog.h
FrameWork/include/TextRecognition/: TesseractOCR.h  TextMatchTesseractOCR.h
FrameWork/src/: AdbController.cpp  CudaMultiPointsRecognition.cpp  ImageRecognition.cpp  TemplateMatchMPR.cpp  TesseractOCR.cpp  TextMatchTesseractOCR.cpp
PCRDemo/: CMakeLists.txt
PCRDemo/include/: Activity.h  CloseDevice.h  ExecuteSchedule.h  Init.h  LaunchDevice.h  Login.h  MainLineNormal.h  MainLineVeryHard.h  PCRParams.hpp  ReceiveGifts.h  Store.h  define.hpp
PCRDemo/src/: Activity.cpp  CloseDevice.cpp  ExecuteSchedule.cpp  Init.cpp  LaunchDevice.cpp  Login.cpp  MainLineHard.cpp  MainLineNormal.cpp  MainLineVeryHard.cpp  ReceiveGifts.cpp  Store.cpp  main.cpp
